# local-mcp

./: .gitignore  pyproject.toml  requirement.txt
src/local_mcp/: base.py  music.py  server.py  settings.py
src/local_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
